# SuperComp2018

./: README.md
GPUfiles/files/: exemplo1  exemplo2
GPUfiles/files/buniac/: ._ex1.cu  ._stocks-google.txt  ex1  ex1.cu
GPUfiles/files/efeiche/: google_stocks  google_stocks.cu
GPUfiles/files/gabi/: ex1  exemplo1  exercicio1.cu
GPUfiles/files/matheus/: .google.cu.swp  google  google.cu  google.cu~
GPUfiles/files/rios/: compareShares.cu  googleCPU_TO_GPU  googleCPU_TO_GPU.cu
entregaSIMD/algoritmo/: funcs  funcs.cpp
entregaSIMD/analiseDados/: ~$analise.xlsx
entregaSIMD/analiseDados/dadosMaiores/: analiseMaior.xlsx  resultadosCompMavx.txt  resultadosCompMavx2.txt  resultadosCompNormMaior.txt
entregaSIMD/relatorio/: 51B6506D.tmp  relatorio.docx  ~$latorio.docx  ~WRL0492.tmp
entregaSIMD/relatorio/arquivos/: assemblymvx.txt  assemblynorm.txt
projeto1/: CMakeLists.txt  README.md  body.h  impactCalc.cpp  impactCalc.h  main.cpp  testParallel.cpp  visualizador.cpp  visualizador.h
projeto1/testesFuncionamento/: hitDiagonal_1  hitDiagonal_2  hitHorizontal  hitVertical  tripleHit
projeto1/testesTempo/: input_100.txt  input_1000.txt  input_500.txt  resultados.txt
projeto2/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  buildFiles.py  cmake_install.cmake  crawler.h  crawler_par.cpp  crawler_parallel  crawler_seq.cpp  crawler_sequential  mainP.cpp  mainS.cpp  parallelRun.py  parallelTimes.txt  produce_consumer.h  produto.h  sequentialRun.py
projeto2/analises/relatorio/: webCrawler-Analises.docx
projeto2/cpr/: CTestTestfile.cmake
projeto2/cpr/cpr/: CTestTestfile.cmake
projeto2/cpr/opt/: CTestTestfile.cmake
projeto2/cpr/opt/curl/: CTestTestfile.cmake
projeto2/cpr/opt/curl/CMake/: cmake_uninstall.cmake
projeto2/cpr/opt/curl/docs/: CTestTestfile.cmake
projeto2/cpr/opt/curl/docs/cmdline-opts/: CTestTestfile.cmake
projeto2/cpr/opt/curl/docs/libcurl/: CTestTestfile.cmake
projeto2/cpr/opt/curl/docs/libcurl/opts/: CTestTestfile.cmake
projeto2/cpr/opt/curl/lib/: CTestTestfile.cmake
projeto2/cpr/opt/googletest/: CTestTestfile.cmake
projeto2/cpr/opt/mongoose/: CTestTestfile.cmake
projeto2/cpr/test/: CTestTestfile.cmake
projeto3/: CMakeLists.txt  README.md  buildFiles.py  controller  controller.cpp  crawler.h  hostfiles2  hostfiles3  hostfiles4  hostfiles5  hostfiles6  hostfiles7  mainS.cpp  produto.cpp  runMPI.py  testes.txt
projeto3/cpr/: CTestTestfile.cmake
projeto3/cpr/cpr/: CTestTestfile.cmake
projeto3/cpr/opt/: CTestTestfile.cmake
projeto3/cpr/opt/curl/: CTestTestfile.cmake
projeto3/cpr/opt/curl/CMake/: cmake_uninstall.cmake
projeto3/cpr/opt/curl/docs/: CTestTestfile.cmake
projeto3/cpr/opt/curl/docs/cmdline-opts/: CTestTestfile.cmake
projeto3/cpr/opt/curl/docs/libcurl/: CTestTestfile.cmake
projeto3/cpr/opt/curl/docs/libcurl/opts/: CTestTestfile.cmake
projeto3/cpr/opt/curl/lib/: CTestTestfile.cmake
projeto3/cpr/opt/googletest/: CTestTestfile.cmake
projeto3/cpr/opt/mongoose/: CTestTestfile.cmake
projeto3/cpr/test/: CTestTestfile.cmake
projeto3/resultados/relatorio/: 27D8F173.tmp  relatorio.docx
projeto3/tempos/: tempos_1_maquina.txt  tempos_2_maquina.txt  tempos_3_maquina.txt  tempos_4_maquina.txt  tempos_5_maquina.txt  tempos_6_maquina.txt  tempos_7_maquina.txt
projeto4/: README.md  times.txt
projeto4/gpu_seg/: border_filter.cu  imagem.h  installCuda.py  main.cpp  runBorderFile.py  runGPU_SEG.py  sssp
projeto4/relatorio/: relatorio.docx
projeto4/seq_seg/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp  runSEQ_SEQ.py  segmentacao_sequencial
projeto4/seq_seg/imgs_input/: ski.pgm
(+5 files in other folders)
